--- a/trunk/basement/docu/CHANGELOG
+++ b/trunk/basement/docu/CHANGELOG
@@ -9,6 +9,23 @@ $Id$
 
 --- v?.?.?-???? - ??. mon year num
 
+
+--- 17. November 2009
+
+der tag der bei bildern eingefügt wird, ist nun über
+$cfg["contented"]["image_tag"] in der contented.cfg.php einstellbar
+
+es werden dann die unter $cfg["contented"]["tags"]["img/imgb"] gemachten
+einstellungen verwendet.
+
+die dateien function_filelist.inc.php und -141347382.modify.js-nextgen.tem.html
+wurden angepasst. ein default "img" in function_filelist.inc.php sorgt fuer
+kompatibilitaet.
+
+ein deprecated hinweis in der overwrite.cfg.php-dist weisst aus die neue
+moeglichkeit hin.
+
+
 --- 11. November 2009
 
 den kompletten edit haken in die overwrite.cfg.php
@@ -19,16 +36,27 @@ besser konfigurieren zu können.
 --- 02. November 2009
 
 Dateien koennen jetzt fuer zur bearbeitung freigegeben werden.
-Dazu muss die Tabelle site_file mit einer neuen Spalte des Typs "varchar" ergaenzt werden, in der die IDs berechtigten Gruppen durch Doppelpunkt getrennt gespeichert werden koennen.
-Der Name dieser Spalte wird in die Variablen $cfg["fileed"]["db"]["file"]["grant_grp"] geschrieben.
-So kann man festlegen, ob eine Datei von allen, nur vom Eigentuemer oder von Mitgliedern von bestimmten Gruppen bearbeitet und geloescht werden.
+Dazu muss die Tabelle site_file mit einer neuen Spalte des Typs "varchar"
+ergaenzt werden, in der die IDs berechtigten Gruppen durch Doppelpunkt getrennt
+gespeichert werden koennen.
+
+Der Name dieser Spalte wird in die Variablen
+$cfg["fileed"]["db"]["file"]["grant_grp"] geschrieben.
+
+So kann man festlegen, ob eine Datei von allen, nur vom Eigentuemer oder von
+Mitgliedern von bestimmten Gruppen bearbeitet und geloescht werden.
+
 Aufbau des Spalteninhalts:  - leer:  urspruengliches Verhalten (nur Eigentuemer kann Datei bearbeiten)
                             -   -1:  jeder kann die Datei bearbeiten
                             -  1:2:  Mitglieder der Gruppen mit den IDs 1 und 2 kann die Datei bearbeiten
 
-Zusaetzlich kann man in der Variablen $cfg["fileed"]["su_groups"] festlegen, welche Gruppen generell alle Dateien bearbeiten koennen.
+Zusaetzlich kann man in der Variablen $cfg["fileed"]["su_groups"] festlegen,
+welche Gruppen generell alle Dateien bearbeiten koennen.
+
 $cfg["fileed"]["su_groups"] ist ein Array und hat die Gruppen-IDs als Elemente.
-$cfg["fileed"]["su_groups"] zieht nur, wenn auch $cfg["fileed"]["db"]["file"]["grant_grp"] gesetzt ist.
+
+$cfg["fileed"]["su_groups"] zieht nur, wenn auch
+ $cfg["fileed"]["db"]["file"]["grant_grp"] gesetzt ist.
 
 
 --- 04. Januar 2009
